# mysql_udf

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
doc/: des_install.sql  des_uninstall.sql
m4/: ax_gcc_visibility.m4
src/: Makefile.am  Makefile.in  des_decrypt_udf.c  des_decrypt_udf.h  mysql_des_config.h.in  mysql_des_conflict.h
